@@ -1,0 +1,47 @@
+Build.PL
+Changes
+LICENSE
+MANIFEST
+META.json
+META.yml
+README
+SIGNATURE
+lib/Async/IPC.pm
+lib/Async/IPC/Base.pm
+lib/Async/IPC/Channel.pm
+lib/Async/IPC/File.pm
+lib/Async/IPC/FileStream.pm
+lib/Async/IPC/Function.pm
+lib/Async/IPC/Functions.pm
+lib/Async/IPC/Future.pm
+lib/Async/IPC/Handle.pm
+lib/Async/IPC/Loop.pm
+lib/Async/IPC/Periodical.pm
+lib/Async/IPC/Process.pm
+lib/Async/IPC/Routine.pm
+lib/Async/IPC/Semaphore.pm
+lib/Async/IPC/Stream.pm
+t/01always_pass.t
+t/02pod.t
+t/03podcoverage.t
+t/05kwalitee.t
+t/06yaml.t
+t/07podspelling.t
+t/10test_script.t
+t/15signal.t
+t/20handle.t
+t/30periodical.t
+t/40routine.log
+t/40routine.t
+t/50semaphore.t
+t/60file.log
+t/60file.t
+t/65filestream.t
+t/70function.t
+t/boilerplate.pm
+t/function_test_worker.err
+t/key.err
+t/routine1.err
+t/routine2.err
+t/routine_test.err
+t/semaphore.err
