@@ -39,24 +39,35 @@ license           = http://dev.perl.org/licenses/
 homepage          = https://metacpan.org/author/PJFL
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Async-IPC
 bugtracker.mailto = bug-Async-IPC@rt.cpan.org
-;repository.url   = git://github.com/pjfl/p5-async-ipc.git
-;repository.web   = http://github.com/pjfl/p5-async-ipc
-;repository.type  = git
+repository.url   = git://github.com/pjfl/p5-async-ipc.git
+repository.web   = http://github.com/pjfl/p5-async-ipc
+repository.type  = git
 
-;[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
-;filename         = README.md
-;location         = root
-;type             = markdown
+[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
+filename         = README.md
+location         = root
+type             = markdown
+
+[Run::BeforeBuild]
+run               = cp .build.PL Build.PL
+
+[CopyFilesFromBuild]
+copy              = Build.PL
+move              = cpanfile
+
+[GatherDir]
+exclude_filename  = cpanfile
 
 ; So apparently order matters
 [ReadmeAnyFromPod]
 [Signature]
-[GatherDir]
 [AbstractFromPOD]
 [LicenseFromModule]
 [VersionFromModule]
 [ModuleBuild::Custom]
+[CPANFile]
 [License]
+[MetaConfig]
 [MetaJSON]
 [MetaYAML]
 [ManifestInRoot]
