@@ -2,14 +2,14 @@ package Async::IPC;
 
 use 5.010001;
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 17 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 18 $ =~ /\d+/gmx );
 
-use Moo;
 use Async::IPC::Loop;
 use Class::Usul::Constants qw( EXCEPTION_CLASS TRUE );
 use Class::Usul::Functions qw( arg_list ensure_class_loaded first_char throw );
 use Class::Usul::Types     qw( BaseType Object );
 use Unexpected::Functions  qw( Unspecified );
+use Moo;
 
 # Public attributes
 has 'loop'    => is => 'lazy', isa => Object,
@@ -47,6 +47,12 @@ __END__
 =pod
 
 =encoding utf-8
+
+=begin html
+
+<a href="https://travis-ci.org/pjfl/p5-async-ipc"><img src="https://travis-ci.org/pjfl/p5-async-ipc.svg?branch=master" alt="Travis CI Badge"></a>
+
+=end html
 
 =head1 Name
 
@@ -177,7 +183,7 @@ Peter Flanigan, C<< <pjfl@cpan.org> >>
 
 =head1 License and Copyright
 
-Copyright (c) 2014 Peter Flanigan. All rights reserved
+Copyright (c) 2015 Peter Flanigan. All rights reserved
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself. See L<perlartistic>
