@@ -2,7 +2,6 @@ package Async::IPC::Periodical;
 
 use namespace::autoclean;
 
-use Moo;
 use Async::IPC::Functions  qw( log_debug );
 use Class::Usul::Constants qw( EXCEPTION_CLASS FALSE TRUE );
 use Class::Usul::Functions qw( throw );
@@ -10,6 +9,7 @@ use Class::Usul::Types     qw( Bool CodeRef NonZeroPositiveNum
                                SimpleStr Undef );
 use English                qw( -no_match_vars );
 use Unexpected::Functions  qw( Unspecified );
+use Moo;
 
 extends q(Async::IPC::Base);
 
@@ -218,7 +218,7 @@ Peter Flanigan, C<< <pjfl@cpan.org> >>
 
 =head1 License and Copyright
 
-Copyright (c) 2014 Peter Flanigan. All rights reserved
+Copyright (c) 2015 Peter Flanigan. All rights reserved
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself. See L<perlartistic>
